@@ -1,3 +1,7 @@
+Thu Mar 19 16:18:00 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c, internal.h: export rb_gc_verify_internal_consistency().
+
 Thu Mar 19 16:15:24 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (obj_info): show allocation site if GC_DEBUG is not 0.
